<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createAlbumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:text="@string/create_album"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/albumNameField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/album_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAlbumLabel"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/albumCoverField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/album_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumNameField"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/albumReleaseDateField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:hint="@string/album_release_date"
            android:textColorHint="#757575"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumCoverField"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/albumGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/albumGenreField"
            android:paddingTop="8sp"
            android:text="@string/album_genre"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumReleaseDateField" />

        <Spinner
            android:id="@+id/albumGenreField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumGenreLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/albumRecordLabelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/albumRecordLabelField"
            android:paddingTop="8sp"
            android:text="@string/album_record_label"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumGenreField" />

        <Spinner
            android:id="@+id/albumRecordLabelField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumRecordLabelLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/albumDescriptionField"
            android:layout_width="366dp"
            android:layout_height="106dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="8sp"
            android:hint="@string/album_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumRecordLabelField"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/submitAlbumCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_form"
            android:textColor="#4E342E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumDescriptionField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>