<resources>
    <string name="app_name">Vinilos - Equipo 12</string>

    <string name="guest">Invitado</string>
    <string name="collector">Coleccionista</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_artists">Artistas</string>
    <string name="menu_albums">Álbumes</string>
    <string name="menu_collectors">Coleccionistas</string>
    <string name="menu_guest">Invitado</string>
    <string name="exit">Salir</string>
    <string name="album">Álbum</string>
    <string name="release_date">Fecha lanzamiento:</string>
    <string name="tracks">Canciones</string>
    <string name="comments">Comentarios</string>
    <string name="link_track">Asociar tracks</string>
    <string name="track_name">Nombre canción</string>
    <string name="track_duration">Duración</string>
    <string name="link">Asociar</string>
    <string name="artists">Artistas favoritos</string>

    <string name="create_album">Crear álbum</string>
    <string name="album_name">Nombre</string>
    <string name="album_cover">Cover</string>
    <string name="album_release_date">Fecha lanzamiento MM-DD-AAAA</string>
    <string name="album_genre">Género</string>
    <string name="album_record_label">Casa disquera</string>
    <string name="album_description">Descripción</string>
    <string name="cover_a11y">Imagen del cover</string>
    <string name="artist_image_a11y">Imagen del artista</string>
    <string name="guest_welcome_image_a11y">Imagen de bienvenida a invitados</string>
    <string name="collector_welcome_image_a11y">Imagen de bienvenida a coleccionistas</string>
    <string name="submit_form">Enviar</string>
</resources>