...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.AlbumsFragment">

            <Button
                android:id="@+id/createAlbumButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="247dp"
                android:layout_height="74dp"
                android:backgroundTint="#00AEF9"
                android:elevation="5dp"
                android:insetLeft="10dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="79dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_album"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAlbumButton"
                tools:listitem="@layout/album_item" />
...
