...
            android:fontFamily="@font/montserrat_bold"
            android:padding="40dp"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/exit_guest_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#00AEF9"
            android:elevation="5dp"
            android:insetLeft="20dp"
...
