<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AlbumsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_artist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/artist_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>
