<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.ArtistDetailsFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artist_image"
        android:layout_width="420dp"
        android:layout_height="220dp"
        android:contentDescription="@string/artist_image_a11y"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/artist_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:padding="25dp"
        android:textSize="25sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/artist_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:padding="30dp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

</LinearLayout>
</ScrollView>